lib/mail/parsers/rfc2822_obsolete.treetop
module Mail
  grammar RFC2822Obsolete
  
    rule obs_qp
      "\\" [\x00-\x7F]
    end

    rule obs_text
      LF* CR* (obs_char LF* CR*)*
    end

    rule obs_char
      [\x00-\x09]      /       # %d0-127 except CR and
      [\x0B-\x0C]      /       # LF
      [\x0E-\x7F]
    end

    rule obs_utext
      obs_text
    end

    # Original: word *(word / "." / CFWS)
    rule obs_phrase
      (word / "." / "@")+
    end

    rule obs_phrase_list
      phrase / (phrase? CFWS? "," CFWS?)+ phrase?
    end

    rule obs_FWS
      WSP+ (CRLF WSP+)*
    end

    rule obs_day_of_week
      CFWS? day_name CFWS?
    end

    rule obs_year
      CFWS? (DIGIT DIGIT) CFWS?
    end

    rule obs_month
      CFWS month_name CFWS
    end

    rule obs_day
      CFWS? (DIGIT / (DIGIT DIGIT))  CFWS?
    end

    rule obs_hour
       CFWS? (DIGIT DIGIT) CFWS?
    end

    rule obs_minute
      CFWS? (DIGIT DIGIT) CFWS?
    end

    rule obs_second
      CFWS? (DIGIT DIGIT) CFWS?
    end

    rule obs_zone
      "UT" / "GMT" /          # Universal Time
                              # North American UT
                              # offsets
      "EST" / "EDT" /         # Eastern:  - 5/ - 4
      "CST" / "CDT" /         # Central:  - 6/ - 5
      "MST" / "MDT" /         # Mountain: - 7/ - 6
      "PST" / "PDT" /         # Pacific:  - 8/ - 7
                              #
      [\x41-\x49] /           # Military zones - "A"
      [\x4B-\x5A] /           # through "I" and "K"
      [\x61-\x69] /           # through "Z", both
      [\x6B-\x7A]             # upper and lower case
    end

    rule obs_angle_addr
      CFWS? "<" obs_route? addr_spec ">" CFWS?
    end
    
    rule obs_route
      CFWS? obs_domain_list ":" CFWS?
    end

    # Original: "@" domain *(*(CFWS / "," ) [CFWS] "@" domain)
    rule obs_domain_list
      "@" domain (("," )* CFWS? "@" domain)*
    end
    
    rule obs_local_part
      word ("." word)*
    end

    rule obs_domain
      atom ("." atom)*
    end

    rule obs_mbox_list
      (mailbox? CFWS? "," CFWS?)+ mailbox?
    end

    rule obs_addr_list
      (address? CFWS? "," CFWS?)+ address?
    end
  end
end
